--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "ipz-2",
   "version": "0.1.0",
   "private": true,
+  "productName": "Electron tutorial app",
   "dependencies": {
     "electron-is-dev": "^1.1.0",
+    "electron-packager": "^14.1.1",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
@@ -23,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-	"electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\""
+    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +46,7 @@
     "concurrently": "^5.0.0",
     "electron": "^7.0.1",
     "electron-builder": "^22.1.0",
+    "prettier": "^1.19.1",
     "wait-on": "^3.3.0"
   }
 }
