--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "productName": "Electron tutorial app",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "electron-is-dev": "^1.1.0",
     "electron-packager": "^14.1.1",
+    "express": "^4.17.1",
     "node-sass": "^4.13.0",
+    "pg": "^7.14.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-date-picker": "^7.8.2",
@@ -27,6 +30,7 @@
     "eject": "react-scripts eject",
     "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\""
   },
+  "proxy": "http://localhost:5000/",
   "eslintConfig": {
     "extends": "react-app"
   },
