--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^4.13.0",
     "pg": "^7.14.0",
     "prop-types": "^15.7.2",
+    "rc-time-picker": "^4.0.0-alpha.2",
     "react": "^16.11.0",
     "react-date-picker": "^7.8.2",
     "react-dom": "^16.11.0",
